[package]
name = "cairo1-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra-type-size = { version = "2.8.0", default-features = false }
cairo-lang-sierra-ap-change = { version = "2.8.0", default-features = false }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", features = [
    "cairo-1-hints",
] }
clap = { version = "4.3.10", features = ["derive"] }
thiserror = { version = "1.0.40" }
mimalloc = { version = "0.1.37", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = [
    "serde",
    "rand",
] }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "alloc",
], default-features = false }
cairo-lang-starknet = { version = "2.8.0", default-features = false }
cairo-lang-casm = { version = "2.8.0", default-features = false }
cairo-lang-starknet-classes = { version = "2.8.0", default-features = false }
cairo-lang-compiler = { version = "=2.8.0", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.8.0", default-features = false }
cairo-lang-sierra = { version = "2.8.0", default-features = false }
cairo-lang-utils = { version = "=2.8.0", default-features = false }
itertools = "0.11.0"
starknet-types-core = "~0.1.4"
