[package]
name = "cairo1-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra-type-size = { version = "2.7.0", default-features = false }
cairo-lang-sierra-ap-change = { version = "2.7.0", default-features = false }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", features = [
    "cairo-1-hints",
] }
clap = { version = "4.5.16", features = ["derive"] }
thiserror = { version = "1.0.32" }
num-bigint = { version = "0.4", default-features = false, features = [
    "serde",
    "rand",
] }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "alloc",
], default-features = false }
cairo-lang-starknet = { version = "2.7.0", default-features = false }
cairo-lang-casm = { version = "2.7.0", default-features = false }
cairo-lang-starknet-classes = { version = "2.7.0", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.7.0", default-features = false }
cairo-lang-sierra = { version = "2.7.0", default-features = false }
cairo-lang-utils = { version = "2.7.0", default-features = false }
itertools = "0.12.1"
starknet-types-core = "~0.1.4"
